# picon

./: .gitignore  Makefile  README.md
debian/: README.Debian  changelog  control  copyright  picon-monitor.install  picon-pass.install  rules
examples/: Makefile
examples/shared_libs/: Makefile  Makefile.cfi  Makefile.common  Makefile.no_cfi  ignored_functions.txt
examples/shared_libs/src/: file2.c  libmylib1.c  libmylib2.c  libmylib3.c  main_prog.c
examples/unit_tests/: Makefile  Makefile.cfi  Makefile.common  Makefile.no_cfi  ignored_functions.txt
examples/unit_tests/src/: test_fork.c  test_indirect_call.c  test_init.c  test_no_basic_blocks.c  test_rop.c  test_rop_asm.c  test_sleep.c
include/picon/: injected_code.c  log.h  picon.h  shared.h
llvm_pass/: CMakeLists.txt  Makefile
llvm_pass/CFI/: CFI.cpp  CFI.hh  CFIInjector.cpp  CFIInjector.hh  CFIModulePass.cpp  CFIModulePass.hh  CMakeLists.txt  Debug.hh  DebugPrintRT.cpp  DebugPrintRT.hh
monitor/: Makefile
monitor/include/: block_stack.h  call_stack.h  defs.h  monitor_dot.h  monitor_load.h  monitor_run.h
monitor/src/: block_stack.c  call_stack.c  defs.c  main.c  monitor_dot.c  monitor_load.c  monitor_run.c
prelink/: Makefile  picon-prelink
